fixed navbar overflow error

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,14 @@ html {
 
 #content {
   position: absolute;
+  /* top: 50%; */
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: center;
+}
+
+#middle {
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
